Fix user-tools misalignment
The user's name is misaligned from the rest of the tools.

--- a/src/naut_src.css
+++ b/src/naut_src.css
@@ -3762,6 +3762,7 @@ ul.image-preview-list {
 
     .res #header-bottom-right .user a {
         font-size: 11px;
+        line-height: 9px;
     }
 
 .res #sr-header-area a.RESShortcutsCurrentSub, .res #RESSubredditGroupDropdown .RESShortcutsCurrentSub a {
